@@ -11,17 +11,23 @@ EBUILD jnr-constants-0.8.2.ebuild 1195 SHA256 c2e9fdd325a9832bbd22a6f21fbf3e50ac
 EBUILD jnr-constants-0.8.3-r1.ebuild 1108 SHA256 d35164d1e948aa2ae0ec91528e50dc5e33d06d5155be46eb0c290bd5e712af5d SHA512 fe0235fd6ed4114adc541160d8f0facce0fe0f3c9001b87067898bfa0e9c0d45e78085378a49ce09a78bb4d0cb0e18db9e6288692dc976f97ec1ee52ed7b5e76 WHIRLPOOL b587f5a18bf92b290d70c6d5bc91aba4efafc326251ff5156d27ac3148ef3c1b686ab8c52cb931a3e25aafd0666d9b23d6b276ecd8a3c87701bb88ae747e12f8
 EBUILD jnr-constants-0.8.3.ebuild 1099 SHA256 244320df5d05ab76d335aaa5a62606455f71bcd3a53e58f4ea223e312d58f407 SHA512 0ee7b57d801353fa2b689e3c7171d1d77624f404578b7ab5cb2d5a6c5de4732899f2b06ae4e778e3237e4c37e8de1e9bffbb78e11f73aefa52579a252b2574c9 WHIRLPOOL 78a16228096ba86fce74e8daa5e88cca373cf91216c6b1aa9cf53b3c5e99cc9d52a585b442b528f7c7c40b8a9d9d4783cfff7a801a56db2c01cc8fa90b618e8a
 EBUILD jnr-constants-0.8.4.ebuild 1096 SHA256 01ed819af6fbbf4589d781cc79699e59a8befe4e859f4cf0054aa72160090dca SHA512 b9fe4a12ad1055d83ef4667aceac1bb35dd5d5afea4760f465573c97c711967c302f769f175eac25133b481647358c8f8b92314690b8804871da75605164fbb9 WHIRLPOOL a41fbbea5049e7b1e9c8e18a99da9ea63ddc86eff41ccfb7bc63d3545cd47ad12b3e4a70fce5bff497e986d79299ba785919b24116469c111d502d4ff82c78e7
-EBUILD jnr-constants-0.8.5.ebuild 1096 SHA256 4f638f77a0613871323303eca89fc3f7ffb68c07b28db86f58713de4cd0ef5f4 SHA512 cb2f05b47db35969d3ef97fa33ed262ef101fd0c5103d8be634d2d3c32336f70736367f76ab006953b1d9f774cafa1735f68ea733dc512fb2f58ac3d5f902e00 WHIRLPOOL 6a65eb54e15f6c50254bbce0c44c864728095d121365a485746155dcbc132559a4377be875a5cc80bcf59c527fdd186e4f955d4e539ef35f2824f83b57f97d9d
-MISC ChangeLog 1637 SHA256 087a9151a349d560fc7cf83096e1ad456b46241b84a44a966a5ba30f2b026349 SHA512 5c7051c5a08dc948d3347b424f8c3cb43c51ede992132a8ea0bff377f34975e41da8166849860bcada494cc946be32fd35502252d3b33817536ba11d10e9162b WHIRLPOOL 2e46337b5d7b7cb6aeecbf8a5871006c5af63443f429f792f17232ba55710b0af9e837aeeb16e7219087bfd1747dd1ee84d37a96de05ed748079a73e94423d76
+EBUILD jnr-constants-0.8.5.ebuild 1099 SHA256 49379fc938ec9bffb759774efe646d3324ef5281392f046963da71f237221098 SHA512 d61f1a6d2caf39a91b92aeb873e19610e7d1643bd07563270ea2336b9eead13e436913fc775adff44dbf312cfa46be3eb47ebc70eb91e33e2456cfaa2550f45a WHIRLPOOL 3cee9cc6e5b9add7f921eabcdf48032a4133599ef0b1479d0bce16ee8e0a1ef0429fe893a0a6063a10661c5a7d06913a62aa1bedea15c7a59e441cd1d580a243
+MISC ChangeLog 1757 SHA256 290fb9f6d9a6bc7343625b781b69b8eff810b83c203c01d79bcf06e0ad7414ef SHA512 74ca2ce37873e82596d10ac5c42525202cf5cdbcf5fd8672899f2a20e786bc1d72496a0af05b236c641f200af59dd9a31a91f460c2c5d66bd95e461b45fd5d8b WHIRLPOOL b9392cce32ed6a73ec0ce4fe7739d6eac5f9ff396f5160aeccd65f4c850af2630840cd62efd7d1a5c930a0250f6e85006f3c30825d4c0afbbc4d9cdeddf2a971
 MISC metadata.xml 205 SHA256 e319f1701f6be29c8e077049d77738b69b72be0458754ef90ad9a684f2ec1722 SHA512 fb7831a8a05e9995888eaef748c98a12adcb911ef1c9901a3555765782d87cd3172cfb2c47ffa89d8a5454e7aa1f5bd27358b88a035c97f1ff388d7fc85a9d7e WHIRLPOOL 673d7b564054942d04b33cfcd01f7c5ff16ad9f9f2a60586ccc54c60443bf2dc34fa037e4e1de889539838342eea62022a3b9a7cae65b0c2f34fcbacfcfd0c73
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.21 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSRbByAAoJEJWyH81tNOV9BpIH+QHAj9XXLKyXsMVSpgV2YLy2
-fF1ZCR/HBn3VEcXoCdU++G3N0aSeaYYbVCtcx+F+EhBy3xvUQbGiDvj/sERe18X9
-Poe7Rmr4wL7/gf6Y80vc877Caw0KM5s28ADFU/0syHB3M1pvqyl2F634nD29E2p5
-dyBGXaIbiD1omTDVdcopbnJvoVvDFXdF0VmkguWGPgaf/do/qzUwYPa09xbna/4e
-5WNehUGOjmmR1tmIuTnuWBRJ0S5Hdv9Ui4DYjmiC4E0WmhU3o7KHbGcLxDlG4wlI
-Q4IV5GiGyGhIjEZevdWtXdkcaVOxf6nWniNbAn/+0UtQD4jDZM5EKUMAxR1+jaM=
-=vHJf
+iQIcBAEBCAAGBQJTCpWWAAoJEE8aJVXqcZkdw4gP/j9rlyWMMq1KRVOlXExlwJve
+iCPzRncXtphwUDSQQnMkyA3/76M28RFLAdGLV/3h/NkhPGOgnynfWJ35IAakw101
+gxzKuIDT8ZoS1KANjV75hsB3N8JUobZvC2qdw5jLo3SsLLz3GkhinSVGNElzyzyU
+OoBMs/26SZkJsJaA7eqPXTGgnq0UbehPbAIBO8DjaG6aEoyH34Hkd/NFIrxXPmxk
+ULAqMiXUAVxDMj3bsSk/2t/Bez6DzbSh3WModNCqscDCUlKs5TUz8f9+NzJEKKpa
++kjfZTAp5ujb82Gq1ShaSmZGdkeEIa8mut9Tq6PPKVcd5pA16wcfVyUEw09hRTr0
+6cManCTSAjRgAQyMQPKY/3RpTWKg7oFY/w8xCgzrr1p6bvsA4lXeCmvFIxBIR0pg
+/FIGJD/MMEk2e2C6sZLAMpDg/S7AZVQ/9YgyQOfjqYvqBr++Lkqyg6FyAksS9d9s
+ktpVrBW8hGh/2p6CHNQhA+3VGjgkbIBLz8gp3XORs287bMxlsPvm4KQHOs/3LwxR
+k8BJ2bLkz3VU2GttlPKw4/JXVn9M4MQyc4mklHcbL9r8eLSI6h0TKSpHiS8OAZQS
+ZKV76Nb5HwB0bbAraCywZiupAYgI5Gdcr7bQXYDBs24DFByGVS8zct1P/R0/I15i
+jkT9Ia1JA2kRh9j4OTFR
+=MzDR
 -----END PGP SIGNATURE-----
