@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jnr-constants
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jnr-constants/ChangeLog,v 1.9 2013/09/27 16:26:21 tomwij Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jnr-constants/ChangeLog,v 1.10 2014/02/24 01:42:56 phajdan.jr Exp $
+
+  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  jnr-constants-0.8.5.ebuild:
+  x86 stable wrt bug #495396
 
 *jnr-constants-0.8.5 (27 Sep 2013)
 
